--- a/src/components/layout/Sidebar/Sidebar.module.css
+++ b/src/components/layout/Sidebar/Sidebar.module.css
@@ -12,7 +12,6 @@
   border-right: 1px solid var(--color-border);
   display: flex;
   flex-direction: column; 
-  margin-bottom: 2rem;
 }
 
 .historyList {
